kubernetes-production-lab/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-traffic-restriction
  namespace: production
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic ONLY from pods labeled tier=application
    - from:
        - podSelector:
            matchLabels:
              tier: application
      ports:
        - protocol: TCP
          port: 3306 # MySQL Port
        - protocol: TCP
          port: 5432 # PostgreSQL Port
